RESOLVED FIXED139283
Fix style sharing with the "type" and "readonly" attributes
https://bugs.webkit.org/show_bug.cgi?id=139283
Summary Fix style sharing with the "type" and "readonly" attributes
Benjamin Poulain
Reported 2014-12-04 19:43:46 PST
Fix style sharing with the "type" and "readonly" attributes
Attachments
Patch (102.75 KB, patch)
2014-12-04 20:04 PST, Benjamin Poulain
koivisto: review+
Benjamin Poulain
Comment 1 2014-12-04 20:04:04 PST
Benjamin Poulain
Comment 2 2014-12-04 20:14:16 PST
Comment on attachment 242612 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=242612&action=review > Source/WebCore/css/RuleSet.cpp:105 > +static bool containsUncommonAttributeSelector(const CSSSelector& rootSelector, bool startsOnRightmostElement) Before landing I should rename this boolean. startsOnRightmostElement->matchesRightmostElement
Antti Koivisto
Comment 3 2014-12-05 12:50:43 PST
Comment on attachment 242612 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=242612&action=review > Source/WebCore/css/RuleSet.cpp:111 > + // It is a very aggressive solution which disable a lot of style sharing on pages that rely on attributes for styling. seems more 'primitive' than 'aggressive'
Benjamin Poulain
Comment 4 2014-12-05 12:57:35 PST
Benjamin Poulain
Comment 5 2015-02-01 17:58:38 PST
*** Bug 123239 has been marked as a duplicate of this bug. ***
Benjamin Poulain
Comment 6 2015-02-01 18:03:11 PST
*** Bug 119000 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 7 2023-04-28 21:11:19 PDT
Note You need to log in before you can comment on or make changes to this bug.